--- a/index.html
+++ b/index.html
@@ -263,24 +263,27 @@
 
     <!-- KONTAK -->
     <section id="kontak" class="section">
-      <h2>Kontak</h2>
-      <p>
-        Kalau lagi jauh atau lagi males ngomong langsung, boleh kirim pesan lewat form ini (simulasi aja).
-      </p>
+  <h2>Kontak</h2>
+  <p>
+    Kalau lagi jauh atau lagi males ngomong langsung, boleh kirim pesan lewat form ini (dan bakal tersimpan selamanya).
+  </p>
 
-      <p><strong>Kontak simbolis:</strong> 09076354534665</p>
+  <p><strong>Kontak simbolis:</strong> 09076354534665</p>
 
-      <form id="contact-form" class="contact-form">
-        <label for="nama">Nama</label>
-        <input type="text" id="nama" placeholder="Tulis nama kamu">
+  <form id="contact-form" class="contact-form">
+    <label for="nama">Nama</label>
+    <input type="text" id="nama" placeholder="Tulis nama kamu">
 
-        <label for="pesan">Pesan</label>
-        <textarea id="pesan" rows="4" placeholder="Tulis pesan singkat"></textarea>
+    <label for="pesan">Pesan</label>
+    <textarea id="pesan" rows="4" placeholder="Tulis pesan singkat"></textarea>
 
-        <button type="submit" class="btn-primary">Kirim</button>
-        <p id="status-pesan" class="status-pesan"></p>
-      </form>
-    </section>
+    <button type="submit" class="btn-primary">Kirim</button>
+    <p id="status-pesan" class="status-pesan"></p>
+
+    <h3 style="margin-top:1.2rem;">Pesan yang Pernah Dikirim</h3>
+    <ul id="contact-list" class="wishlist-list"></ul>
+  </form>
+</section>
     <!-- SECTION LDR -->
 <section id="ldr" class="section">
   <h2>Hubungan LDR Kita</h2>
